all the stuff that needs to be done

--- a/war/index.html
+++ b/war/index.html
@@ -92,8 +92,8 @@
 		var MAX_HEIGHT = 6000;
 	
 		// CUSTOM_PARAMETERS - URLs for save and export
-		var EXPORT_URL = 'http://exp.draw.io/ImageExport/export';
-		var SHARE_HOST = 'http://shr.diagramly.com:8000';
+		var EXPORT_URL = '/ImageExport/export';
+		var SHARE_HOST = 'http://localhost:8080';
 
 		var SAVE_URL = 'save';
 		var OPEN_URL = 'open';
